fix(settings/transcoding): table has wrong width on IE11

--- a/src/applications/settings-transcoding-settings-app/transcoding-profiles/transcoding-profiles-list/transcoding-profiles-list.component.scss
+++ b/src/applications/settings-transcoding-settings-app/transcoding-profiles/transcoding-profiles-list/transcoding-profiles-list.component.scss
@@ -5,6 +5,7 @@
   border-top-right-radius: 5px;
   background-color: white;
   display: inline-block;
+  max-width: 100%;
   .kTranscodingProfilesListTitle {
     margin-top: 28px;
     margin-bottom: 12px;
